--- a/index.html
+++ b/index.html
@@ -68,17 +68,17 @@
     <div id="impress">
 
         <div class="step">
-            <h4><strong>Date</strong> | <a href="#">Location</a></h4>
-            <h4><strong>Context</strong></h4>
+            <h4><strong>2018-05-29</strong> | <a href="#">Wuppertal</a></h4>
+            <h4><strong>Annotation Kommentar Erläuterung Vortragsreihe des IZED</strong></h4>
 
-            <h1 class="down-100">Title</h1>
+            <h1 class="down-100">epidat – Forschungsplattform zur jüdischen Grabsteinepigraphik</h1>
 
-            <h2 class="red up-25">Subtitle</h2>
+            <h2 class="red up-25">Edition, Kommentierung, Annotation, Visualisierung und Analyse jüdischer Grabmale aus neun Jahrhundert</h2>
 
             <h4 class="down-100">
                 <strong>Slides:</strong>
-                <a href="https://kollatzthomas/github.io/#" title="View the presentation online">
-                    https://kollatzthomas/github.io/#
+                <a href="https://kollatzthomas.github.io/20180529_Wupptertal" title="View the presentation online">
+                    https://kollatzthomas.github.io/#
                 </a>
             </h4>
 
